# DidM

./: .gitignore  Cargo.toml  flake.nix
docs/: QuickStart.md  didm.toml
src/: main.rs
src/action/: mod.rs  model.rs
src/bakcup/: error.rs  manager.rs  mod.rs  model.rs  types.rs
src/cli/: mod.rs  parser.rs  process.rs  prompt.rs
src/commands/: ctx.rs  executor.rs  mod.rs  runner.rs
src/composition/: args.rs  ctx.rs  error.rs  mod.rs
src/config/: loader.rs  main_config.rs  map.rs  mod.rs
src/entries/: apply.rs  bakcup.rs  builder.rs  collector.rs  entry.rs  error.rs  init.rs  list.rs  manager.rs  mod.rs  tree.rs  types.rs  walk.rs
src/entries/apply_strategy/: link.rs  mod.rs
src/entries/entry_builder/: builder.rs  extra.rs  mod.rs  normal.rs  same_source.rs  types.rs  variant.rs
src/entries/manager/: apply.rs  init.rs  list.rs  mod.rs  model.rs
src/entries/strategy/: copy.rs
src/helpers/: checker.rs  mod.rs
src/helpers/path/: error.rs  mod.rs  pathext.rs  resolved_path.rs  resolver.rs
src/log/: level.rs  logger.rs  mod.rs
src/model/: behaviour.rs  check.rs  check_config.rs  composition.rs  config.rs  mod.rs  option_field.rs  plan.rs  profile.rs  runner.rs  sketch.rs  skip_check.rs
src/model/sketch/: types.rs
src/path/: error.rs  mod.rs  resolver.rs
src/plan/: args.rs  ctx.rs  mod.rs
src/profile/: bakcup.rs  ctx.rs  entry.rs  error.rs  mod.rs  walk.rs
src/utils/: checker.rs  mod.rs  prompt.rs
src/utils/path/: error.rs  pathext.rs  resolved_path.rs  resolver.rs
src/validation/: check.rs
