[package]
name = "DidM"
description = "DidM is a dotfile Manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
log = "0.4.27"
clap = { version = "4.5.39", features = ["derive"] }
ratatui = "0.29.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
walkdir = "2.5.0"
ignore = "0.4.23"
thiserror = "2.0.12"
# tokio = { version = "1.45.1" }
