[package]
name = "DidM"
description = "DidM is a dotfile Manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
log = "0.4.27"
clap = { version = "4.5.39", features = ["derive"] }
ratatui = "0.29.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
walkdir = "2.5.0"
ignore = "0.4.23"
thiserror = "2.0.12"
crossbeam = "0.8.4"
chrono = "0.4.41"
path-absolutize = "3.1.1"
once_cell = "1.21.3"
schemars = "0.9.0"
serde_json = "1.0.140"
urlencoding = "2.1.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "rt"] }
[build-dependencies]
schemars = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
